Added HomePage and application routing.

--- a/src/client/styles/style.sass
+++ b/src/client/styles/style.sass
@@ -23,7 +23,7 @@
 // @import "node_modules/bootstrap/scss/_breadcrumb.scss"
 // @import "node_modules/bootstrap/scss/_pagination.scss"
 @import "node_modules/bootstrap/scss/_badge.scss"
-// @import "node_modules/bootstrap/scss/_jumbotron.scss"
+@import "node_modules/bootstrap/scss/_jumbotron.scss"
 @import "node_modules/bootstrap/scss/_alert.scss"
 @import "node_modules/bootstrap/scss/_progress.scss"
 // @import "node_modules/bootstrap/scss/_media.scss"
