JsonViewer works in AST tab

--- a/src/client/styles/ast.sass
+++ b/src/client/styles/ast.sass
@@ -13,3 +13,12 @@
 
     .btn
       font-size: 12px
+
+.react-json-view
+  max-height: 800px !important // I honestly don't know how to solve this one
+
+
+//#graph
+//  width: 49vw
+//  height: 70vh
+//  border: 1px solid lightgray
