WIP: Fantomas online with settings and versions.

--- a/src/client/styles/style.sass
+++ b/src/client/styles/style.sass
@@ -15,7 +15,7 @@
 @import "node_modules/bootstrap/scss/_transitions.scss"
 // @import "node_modules/bootstrap/scss/_dropdown.scss"
 @import "node_modules/bootstrap/scss/_button-group.scss"
-// @import "node_modules/bootstrap/scss/_input-group.scss"
+@import "node_modules/bootstrap/scss/_input-group.scss"
 // @import "node_modules/bootstrap/scss/_custom-forms.scss"
 @import "node_modules/bootstrap/scss/_nav.scss"
 @import "node_modules/bootstrap/scss/_navbar.scss"
@@ -89,3 +89,4 @@
 @import "trivia"
 @import "tokens"
 @import "ast"
+@import "fantomas"
