Improved styling for AST json view.

--- a/src/client/styles/ast.sass
+++ b/src/client/styles/ast.sass
@@ -15,8 +15,11 @@
       font-size: 12px
 
 .react-json-view
-  max-height: 800px !important // I honestly don't know how to solve this one
-
+  display: flex
+  min-height: 0px
+  flex: 1
+  overflow-y: auto
+  max-height: 75vh
 
 //#graph
 //  width: 49vw
