--- a/src/client/styles/style.sass
+++ b/src/client/styles/style.sass
@@ -79,9 +79,12 @@
   display: flex
   flex: 1
   flex-direction: column
+  overflow-y: hidden
+  justify-content: space-between
 
   .tab-result
     flex: 1
+    min-height: 0px
     overflow-y: auto
 
   .tab-settings
