New UX for settings, in fsharp token tab.

--- a/src/client/styles/style.sass
+++ b/src/client/styles/style.sass
@@ -68,12 +68,16 @@
 .bred
   border: 1px solid red
 
+.form-control
+  border-radius: 0
+
 .version-bar
   font-size: 10px
   line-height: 14px
-  background-color: $primary
-  color: $white
+  color: $primary
+  // color: $white
   text-align: center
+  margin-bottom: 0.5rem
 
 #tab-content
   display: flex
@@ -89,6 +93,7 @@
 
   .tab-settings
 
+@import "settings"
 @import "trivia"
 @import "tokens"
 @import "ast"
