Refactored Fantomas view

--- a/src/client/styles/settings.sass
+++ b/src/client/styles/settings.sass
@@ -20,6 +20,8 @@ $width: 400px
     background-color: $white
     padding: 1rem
     transition: 0.4s all
+    max-height: 100%
+    overflow-y: auto
 
     h1
       margin-bottom: 2rem
