Color IN token blue.

--- a/src/client/styles/tokens.sass
+++ b/src/client/styles/tokens.sass
@@ -108,6 +108,7 @@ $white-bis: #fafafa
 +tokenColor(class, #6bb9f0, true)
 +tokenColor(end, #6bb9f0, true)
 +tokenColor(type, #6bb9f0, true)
++tokenColor(in, #6bb9f0, true)
 +tokenColor(hash_if, #4e80f0, true)
 
 +tokenColor(whitespace, rgb(236, 240, 241))
