--- a/src/client/src/styles/tokens.sass
+++ b/src/client/src/styles/tokens.sass
@@ -94,22 +94,22 @@ $white-bis: #fafafa
   overflow-y: hidden
 
 
-+tokenColor(let, #6bb9f0, true)
-+tokenColor(match, #6bb9f0, true)
-+tokenColor(with, #6bb9f0, true)
-+tokenColor(private, #6bb9f0, true)
-+tokenColor(mutable, #6bb9f0, true)
-+tokenColor(if, #6bb9f0, true)
-+tokenColor(then, #6bb9f0, true)
-+tokenColor(else, #6bb9f0, true)
-+tokenColor(elif, #6bb9f0, true)
-+tokenColor(namespace, #6bb9f0, true)
-+tokenColor(module, #6bb9f0, true)
-+tokenColor(class, #6bb9f0, true)
-+tokenColor(end, #6bb9f0, true)
-+tokenColor(type, #6bb9f0, true)
-+tokenColor(in, #6bb9f0, true)
-+tokenColor(hash_if, #4e80f0, true)
++tokenColor("let", #6bb9f0, true)
++tokenColor("match", #6bb9f0, true)
++tokenColor("with", #6bb9f0, true)
++tokenColor("private", #6bb9f0, true)
++tokenColor("mutable", #6bb9f0, true)
++tokenColor("if", #6bb9f0, true)
++tokenColor("then", #6bb9f0, true)
++tokenColor("else", #6bb9f0, true)
++tokenColor("elif", #6bb9f0, true)
++tokenColor("namespace", #6bb9f0, true)
++tokenColor("module", #6bb9f0, true)
++tokenColor("class", #6bb9f0, true)
++tokenColor("end", #6bb9f0, true)
++tokenColor("type", #6bb9f0, true)
++tokenColor("in", #6bb9f0, true)
++tokenColor("hash_if", #4e80f0, true)
 
 +tokenColor(whitespace, rgb(236, 240, 241))
 +tokenColor(ident, rgb(200, 247, 197))
