Continue migration to Fable 3 and snowpack.

--- a/src/client/src/styles/tokens.sass
+++ b/src/client/src/styles/tokens.sass
@@ -30,10 +30,9 @@ $white-bis: #fafafa
 
 
 #tokens
-  flex-grow: 1
+  height: 50%
   width: 100%
   overflow: auto
-  min-height: 0px
 
   .lines
     display: inline-flex
@@ -122,7 +121,7 @@ $white-bis: #fafafa
 +tokenColor(string_text, rgba(254, 241, 95, 1))
 
 #details
-  width: 66vw
+  height: 50%
 
   .detail-container
     overflow-x: auto
