--- a/src/client/src/styles/style.sass
+++ b/src/client/src/styles/style.sass
@@ -38,8 +38,13 @@
 @import "../../node_modules/bootstrap/scss/_utilities.scss"
 // @import "node_modules/bootstrap/scss/_print.scss"
 
-#elmish-app
+#app
   height: 100vh
+  overflow: hidden
+
+#main
+  height: calc(100vh - 70px)
+  overflow: hidden
 
 .fa-github-wrapper
   width: 24px
@@ -80,20 +85,15 @@
   margin-bottom: 0.5rem
 
 #tab-content
-  display: flex
-  flex: 1
-  flex-direction: column
+  height: calc(100% - 42px)
   overflow-y: hidden
-  justify-content: space-between
 
   .tab-result
-    flex: 1
-    min-height: 0px
+    height: 100%
     overflow-y: auto
 
-
 @import "settings"
-@import "trivia"
 @import "tokens"
-@import "ast"
-@import "fantomas"
+// @import "trivia"
+// @import "ast"
+// @import "fantomas"
