Clean and snowpack build.

--- a/src/client/src/styles/tokens.sass
+++ b/src/client/src/styles/tokens.sass
@@ -1,3 +1,5 @@
+@import "../../node_modules/bootstrap/scss/_functions.scss"
+@import "../../node_modules/bootstrap/scss/_variables.scss"
 @import "variables"
 
 $line-number-width: 25px
