--- a/src/client/src/styles/trivia.sass
+++ b/src/client/src/styles/trivia.sass
@@ -1,4 +1,7 @@
 @import "variables"
+@import "../../node_modules/bootstrap/scss/_functions.scss"
+@import "../../node_modules/bootstrap/scss/_variables.scss"
+@import "../../node_modules/bootstrap/scss/_mixins.scss"
 
 #trivia-settings
   .btn-group
