Gitpod setup and UI fix.

--- a/src/client/src/styles/style.sass
+++ b/src/client/src/styles/style.sass
@@ -94,6 +94,6 @@
 
 @import "settings"
 @import "tokens"
-// @import "trivia"
+@import "trivia"
 // @import "ast"
-// @import "fantomas"
+@import "fantomas"
