--- a/src/client/src/styles/style.sass
+++ b/src/client/src/styles/style.sass
@@ -46,6 +46,11 @@
   height: calc(100vh - 70px)
   overflow: hidden
 
+#sponsor-button
+  border-color: rgba(27, 31, 35, 0.15)
+  &:hover
+    background-color: rgb(243, 244, 246)
+
 .fa-github-wrapper
   width: 24px
   display: inline
