--- a/_dist_/styles/style.css
+++ b/_dist_/styles/style.css
@@ -9199,6 +9199,10 @@ tr.trivia-candidate-token-node td:not(:first-child) {
   background-color: rgba(162, 222, 208, 0.05);
 }
 
+tr.trivia-candidate-main-node td, tr.trivia-candidate-token-node td {
+  padding: 9px;
+}
+
 .nav-link-newline {
   background-color: #51BCD6;
   color: #FFF;
@@ -9316,6 +9320,11 @@ tr.trivia-candidate-token-node td:not(:first-child) {
 }
 #trivia-settings .form-group label {
   margin: 0 15px;
+}
+
+#trivia-result-content {
+  overflow-y: auto;
+  max-height: calc(100vh - 154px);
 }
 
 .flex-1 {
