--- a/src/client/src/styles/ast.sass
+++ b/src/client/src/styles/ast.sass
@@ -1,13 +1,31 @@
 @import "variables"
 
-.react-json-view
-  display: flex
-  min-height: 0px
-  flex: 1
-  overflow-y: auto
-  max-height: 75vh
+// .react-json-view
+//   display: flex
+//   min-height: 0px
+//   flex: 1
+//   overflow-y: auto
+//   max-height: 75vh
 
-//#graph
-//  width: 49vw
-//  height: 70vh
-//  border: 1px solid lightgray
+
+#ast-content
+  display: flex
+  flex-direction: column
+  height: 100%
+
+.ast-editor-container
+  flex: 1
+
+#ast-errors
+  border-top: 2px solid $primary
+  background-color: transparentize($danger, 0.95)
+  padding-top: 10px
+  padding-bottom: 50px
+
+  li
+    font-size: 0.8rem
+    .badge
+      margin-right: 5px
+    strong
+      font-size: 0.9em
+      margin-right: 5px
