Display F# errors, warnings and idempotency problems. Fixes #190.

--- a/src/client/src/styles/ast.sass
+++ b/src/client/src/styles/ast.sass
@@ -20,7 +20,8 @@
   border-top: 2px solid $primary
   background-color: transparentize($danger, 0.95)
   padding-top: 10px
-  padding-bottom: 50px
+  padding-bottom: 55px
+  margin-bottom: 0
 
   li
     font-size: 0.8rem
