--- a/src/client/src/styles/fantomas.sass
+++ b/src/client/src/styles/fantomas.sass
@@ -7,4 +7,16 @@
   color: $white
 
 #tab-content .tab-result.fantomas-result
-  overflow-y: initial
+  display: flex
+  flex-direction: column
+  height: 100%
+
+.fantomas-editor-container
+  flex: 1
+
+.idempotent-error
+  font-size: 0.8rem
+  h6
+    font-size: 0.9rem
+  .btn
+    margin: 5px 0
