--- a/_dist_/styles/fantomas.css
+++ b/_dist_/styles/fantomas.css
@@ -7,5 +7,21 @@
 }
 
 #tab-content .tab-result.fantomas-result {
-  overflow-y: initial;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.fantomas-editor-container {
+  flex: 1;
+}
+
+.idempotent-error {
+  font-size: 0.8rem;
+}
+.idempotent-error h6 {
+  font-size: 0.9rem;
+}
+.idempotent-error .btn {
+  margin: 5px 0;
 }
