--- a/_dist_/styles/style.css
+++ b/_dist_/styles/style.css
@@ -9341,7 +9341,8 @@ tr.trivia-candidate-main-node td, tr.trivia-candidate-token-node td {
   border-top: 2px solid #22A7F0;
   background-color: rgba(224, 29, 49, 0.05);
   padding-top: 10px;
-  padding-bottom: 50px;
+  padding-bottom: 55px;
+  margin-bottom: 0;
 }
 #ast-errors li {
   font-size: 0.8rem;
@@ -9363,5 +9364,21 @@ tr.trivia-candidate-main-node td, tr.trivia-candidate-token-node td {
 }
 
 #tab-content .tab-result.fantomas-result {
-  overflow-y: initial;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.fantomas-editor-container {
+  flex: 1;
+}
+
+.idempotent-error {
+  font-size: 0.8rem;
+}
+.idempotent-error h6 {
+  font-size: 0.9rem;
+}
+.idempotent-error .btn {
+  margin: 5px 0;
 }
