--- a/src/client/src/styles/variables.sass
+++ b/src/client/src/styles/variables.sass
@@ -5,3 +5,7 @@ $danger: #E01D31
 $warning: #D69D36
 $success: #66D4AC
 $white: #FFF
+
+// workaround for snowpack issue
+blink
+    font-weight: bolder
