--- a/src/client/src/styles/variables.sass
+++ b/src/client/src/styles/variables.sass
@@ -1,7 +1,9 @@
-$dark: #211426
-$primary: #22A7F0
-$secondary: #5fcde3
-$danger: #E01D31
-$warning: #D69D36
-$success: #66D4AC
+$dark: #222222
+$primary: #338CBB
+$secondary: #2FBADC
+$danger: #C74910
+$warning: #C7901B
+$success: #88D1A6
 $white: #FFF
+$font-family-sans-serif: 'Poppins', sans-serif
+$headings-font-family: 'Reem Kufi', sans-serif
