back button move to top

--- a/src/client/src/styles/oak.sass
+++ b/src/client/src/styles/oak.sass
@@ -36,3 +36,13 @@
       &.directive
         color: $white
         background: $primary
+        
+#graph-view-commands
+  position: fixed
+  z-index: 10
+  top:  8rem
+  right: 1.5rem
+
+  .btn
+    border-radius: 0
+    margin-right: 0.5rem
