Change Newline background color

--- a/src/client/src/styles/oak.sass
+++ b/src/client/src/styles/oak.sass
@@ -30,8 +30,8 @@
         background: $success
 
       &.newline
-        color: $white
-        background: $dark
+        color: $black
+        background: $grey
 
       &.directive
         color: $white
