--- a/src/client/src/styles/variables.sass
+++ b/src/client/src/styles/variables.sass
@@ -4,6 +4,7 @@ $secondary: #2FBADC
 $danger: #C74910
 $warning: #C7901B
 $success: #88D1A6
+$grey: #DDD
 $white: #FFF
 $font-family-sans-serif: 'Poppins', sans-serif
 $headings-font-family: 'Reem Kufi', sans-serif
