--- a/src/client/src/styles/oak.sass
+++ b/src/client/src/styles/oak.sass
@@ -30,9 +30,19 @@
         background: $success
 
       &.newline
-        color: $white
-        background: $dark
+        color: $black
+        background: $grey
 
       &.directive
         color: $white
         background: $primary
+        
+#graph-view-commands
+  position: fixed
+  z-index: 10
+  top:  8rem
+  right: 1.5rem
+
+  .btn
+    border-radius: 0
+    margin-right: 0.5rem
