Update to bootstrap 5 and remove Reactstrap.

--- a/src/client/src/styles/variables.sass
+++ b/src/client/src/styles/variables.sass
@@ -8,3 +8,4 @@ $grey: #DDD
 $white: #FFF
 $font-family-sans-serif: 'Poppins', sans-serif
 $headings-font-family: 'Reem Kufi', sans-serif
+$enable-rounded: false
