--- a/src/client/src/styles/style.sass
+++ b/src/client/src/styles/style.sass
@@ -1,42 +1,51 @@
 @import "variables"
 
+// Configuration
 @import "../../node_modules/bootstrap/scss/_functions.scss"
 @import "../../node_modules/bootstrap/scss/_variables.scss"
+@import "../../node_modules/bootstrap/scss/_maps.scss"
 @import "../../node_modules/bootstrap/scss/_mixins.scss"
-@import "../../node_modules/bootstrap/scss/_root.scss"
-@import "../../node_modules/bootstrap/scss/_reboot.scss"
-@import "../../node_modules/bootstrap/scss/_type.scss"
-@import "../../node_modules/bootstrap/scss/_images.scss"
-@import "../../node_modules/bootstrap/scss/_code.scss"
-@import "../../node_modules/bootstrap/scss/_grid.scss"
-@import "../../node_modules/bootstrap/scss/_tables.scss"
-@import "../../node_modules/bootstrap/scss/_forms.scss"
-@import "../../node_modules/bootstrap/scss/_buttons.scss"
-@import "../../node_modules/bootstrap/scss/_transitions.scss"
-// @import "node_modules/bootstrap/scss/_dropdown.scss"
-@import "../../node_modules/bootstrap/scss/_button-group.scss"
-@import "../../node_modules/bootstrap/scss/_input-group.scss"
-// @import "node_modules/bootstrap/scss/_custom-forms.scss"
-@import "../../node_modules/bootstrap/scss/_nav.scss"
-@import "../../node_modules/bootstrap/scss/_navbar.scss"
-// @import "node_modules/bootstrap/scss/_card.scss"
-// @import "node_modules/bootstrap/scss/_breadcrumb.scss"
-// @import "node_modules/bootstrap/scss/_pagination.scss"
-@import "../../node_modules/bootstrap/scss/_badge.scss"
-@import "../../node_modules/bootstrap/scss/_jumbotron.scss"
-@import "../../node_modules/bootstrap/scss/_alert.scss"
-@import "../../node_modules/bootstrap/scss/_progress.scss"
-// @import "node_modules/bootstrap/scss/_media.scss"
-@import "../../node_modules/bootstrap/scss/_list-group.scss"
-@import "../../node_modules/bootstrap/scss/_close.scss"
-@import "../../node_modules/bootstrap/scss/_toasts.scss"
-@import "../../node_modules/bootstrap/scss/_modal.scss"
-@import "../../node_modules/bootstrap/scss/_tooltip.scss"
-@import "../../node_modules/bootstrap/scss/_popover.scss"
-// @import "node_modules/bootstrap/scss/_carousel.scss"
-@import "../../node_modules/bootstrap/scss/_spinners.scss"
 @import "../../node_modules/bootstrap/scss/_utilities.scss"
-// @import "node_modules/bootstrap/scss/_print.scss"
+
+// Layout & components
+@import "../../node_modules/bootstrap/scss/_root"
+@import "../../node_modules/bootstrap/scss/_reboot"
+@import "../../node_modules/bootstrap/scss/_type"
+@import "../../node_modules/bootstrap/scss/_images"
+@import "../../node_modules/bootstrap/scss/_containers"
+@import "../../node_modules/bootstrap/scss/_grid"
+@import "../../node_modules/bootstrap/scss/_tables"
+@import "../../node_modules/bootstrap/scss/_forms"
+@import "../../node_modules/bootstrap/scss/_buttons"
+@import "../../node_modules/bootstrap/scss/_transitions"
+//@import "../../node_modules/bootstrap/scss/_dropdown"
+@import "../../node_modules/bootstrap/scss/_button-group"
+@import "../../node_modules/bootstrap/scss/_nav"
+@import "../../node_modules/bootstrap/scss/_navbar"
+//@import "../../node_modules/bootstrap/scss/_card"
+//@import "../../node_modules/bootstrap/scss/_accordion"
+//@import "../../node_modules/bootstrap/scss/_breadcrumb"
+//@import "../../node_modules/bootstrap/scss/_pagination"
+@import "../../node_modules/bootstrap/scss/_badge"
+@import "../../node_modules/bootstrap/scss/_alert"
+@import "../../node_modules/bootstrap/scss/_progress"
+@import "../../node_modules/bootstrap/scss/_list-group"
+@import "../../node_modules/bootstrap/scss/_close"
+@import "../../node_modules/bootstrap/scss/_toasts"
+@import "../../node_modules/bootstrap/scss/_modal"
+@import "../../node_modules/bootstrap/scss/_tooltip"
+@import "../../node_modules/bootstrap/scss/_popover"
+//@import "../../node_modules/bootstrap/scss/_carousel"
+@import "../../node_modules/bootstrap/scss/_spinners"
+//@import "../../node_modules/bootstrap/scss/_offcanvas"
+//@import "../../node_modules/bootstrap/scss/_placeholders"
+
+// Helpers
+@import "../../node_modules/bootstrap/scss/helpers"
+
+// Utilities
+@import "../../node_modules/bootstrap/scss/utilities/api"
+
 
 #app
   height: 100vh
