--- a/src/client/src/styles/style.css
+++ b/src/client/src/styles/style.css
@@ -417,6 +417,41 @@ nav > div #docs-btn .long-text {
     right: var(--unit-2);
 }
 
+/* Loader */
+#loading {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#loading > div {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+}
+
+#loading > div:after {
+    content: " ";
+    display: block;
+    width: 64px;
+    height: 64px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid var(--primary);
+    border-color: var(--primary) transparent var(--primary) transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 /* Diagnostic errors */
 #diagnostics {
     border-top: 1px solid var(--primary-border);
